Add quick test cell

--- a/jupyter-notebooks/TCDF-mod-test.ipynb
+++ b/jupyter-notebooks/TCDF-mod-test.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Causal discovery of time series\n",
-    "\n",
-    "Tigramite + TCDF tests"
+    "# For quick tests"
    ]
   },
   {
@@ -60,6 +58,25 @@
     "\n",
     "TCDF_solver.get_causes()\n",
     "TCDF_solver.check_with_ground_truth(dataset_gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TCDF_solver.plot_graph(ground_truth=dataset_gt)\n",
+    "TCDF_solver.visualize_weights(targets='x0', pointwise=True, attention_scores=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Causal discovery of time series\n",
+    "\n",
+    "Tigramite + TCDF tests"
    ]
   },
   {
